--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
             <!-- Marcadores visuales
             <button class="marker" style="left: 50%; top: 15%;" data-info="Verdantia" onclick="openModal('VerdantiaModal', 'Informacion');"></button> -->
             <button class="marker" style="left: 80%; top: 33%;" data-info="Stilport" onclick="openModal('StilportModal', 'StilportInformacion');"></button>
-            <button class="marker" style="left: 35%; top: 78%;" data-info="Stilport" onclick="openModal('BelyarModal', 'BelyarInformacion');"></button>
+            <button class="marker" style="left: 35%; top: 78%;" data-info="Belyar" onclick="openModal('BelyarModal', 'BelyarInformacion');"></button>
             <div class="tooltip" id="tooltip"></div>
         </div>
     </div>
@@ -381,7 +381,7 @@
 
             <div id="Brah’drumInformacion" class="tab-content" style="display:none;">
                 <h2>Brah'drum, el Terror</h2>
-                <p>Entre las antiguas y oscuras deidades que existen desde el principio de los tiempos, <strong>Brah'drum</strong> e alza como una de las más temidas, un ser que encarna el terror y la corrupción en su forma más pura. Conocido como el Terror de los Doce Abismos, este dios es una manifestación de la desesperanza y el caos, su presencia es una maldición que se extiende por los rincones más oscuros del multiverso.</p>
+                <p>Entre las antiguas y oscuras deidades que existen desde el principio de los tiempos, <strong>Brah'drum</strong> se alza como una de las más temidas, un ser que encarna el terror y la corrupción en su forma más pura. Conocido como el Terror de los Doce Abismos, este dios es una manifestación de la desesperanza y el caos, su presencia es una maldición que se extiende por los rincones más oscuros del multiverso.</p>
                 <p>Brah'drum se representa con doce cabezas que emergen de un cuerpo amorfo, una abominación de sombras retorcidas. Cada cabeza está coronada por ojos negros como el vacío mismo, con pupilas blancas del tamaño de guisantes, que parecen penetrar en el alma de aquellos que se atreven a mirarlos. Los ojos de Brah'drum no solo ven el presente, sino también los miedos más profundos de cada ser, extrayendo sus peores pesadillas para convertirlas en realidad.</p>
                 <p>Se dice que cada uno de estos ojos tiene un propósito único: uno observa el pasado, reviviendo los traumas olvidados; otro se fija en el futuro, mostrando visiones de desesperación inevitable; mientras que los restantes se enfocan en el presente, retorciendo la realidad hasta que solo queda el caos. Las cabezas de Brah'drum, siempre en movimiento, emiten susurros inaudibles para los mortales, pero cuyo eco es capaz de desatar la locura en los más sabios.</p>
                 <p>El origen de Brah'drum permanece envuelto en misterio. Algunos textos apócrifos sugieren que nació del primer grito de agonía del cosmos, un fragmento de la oscuridad primordial que nunca fue completamente suprimido por la creación del universo. Desde entonces, Brah'drum ha observado a las criaturas que habitan los mundos, no con una curiosidad benevolente, sino con una intención maliciosa, esperando el momento para desatar su poder destructivo.</p>
