--- a/index.html
+++ b/index.html
@@ -420,6 +420,7 @@
         <p>Los magos elementales eran seres de poder inimaginable, surgidos de los mismos elementos que controlaban. Cada uno poseía un dominio absoluto sobre su elemento, y su influencia se extendía por todo el planeta.</p>
         <ul>
             <li>Pyroth, el Señor del Fuego: Un mago cuyas llamas ardían eternamente, capaz de moldear y manipular el fuego a voluntad. Pyroth se regocijaba en la creación de volcanes y tormentas de fuego, disfrutando del caos y la renovación que su elemento traía.</li>
+            <li>Koryolis, Maestra de los vientos y las tormentas, Koryolis era un espíritu libre que danzaba entre las corrientes de aire. Su risa se escuchaba en el susurro del viento, y sus suspiros podían convocar huracanes devastadores.</li>
             <li>Terrak, el Guardián de la Tierra: Un gigante de roca y tierra, Terrak controlaba las montañas y los valles. Cada pisada suya podía cambiar el paisaje, y bajo su vigilancia, las plantas crecían y las tierras fértiles se extendían.</li>
             <li>Aquaris, el Soberano del Agua: Un ser fluido y cambiante, Aquaris dominaba todos los cuerpos de agua, desde los ríos más tranquilos hasta los océanos más furiosos. Podía transformar una gota de agua en una inundación y gobernar las mareas con un solo gesto.</li>
             <li>Voltaris, el Amo de la Electricidad: Un mago hecho de energía pura, capaz de manipular el relámpago y la electricidad. Voltaris era impredecible y rápido como una tormenta eléctrica, y su poder podía animar la vida o destruirla al instante.</li>
